# paddleocrapp

./: check_paddle.py  create_table_pdf.py  main.py  main_api.py  pyproject.toml  test.py  test_extractor_api.py  test_table.py
models/: enums.py  schemas.py
output/: image_res.json  res.json
routers/: aadhaar_router.py  extractor_api.py  pan_router.py
services/: bank_statement_service.py  face_service.py  financial_service.py  loan_service.py  matching_service.py  ocr_service.py  pdf_utils.py  queue_service.py  statement_service.py  table_service.py
services/parsers/: aadhaar_parser.py  base_parser.py  pan_parser.py
static/: index.html
utils/: api_logger.py
