[project]
name = "creatiotialvalidator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.13.0.90",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
