[project]
name = "creatiotialvalidator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "numpy>=2.3.5",
    "opencv-python-headless>=4.13.0.90",
    "paddleocr[all]>=3.3.2",
    "paddlepaddle>=3.2.2",
    "paddlex[ocr]>=3.3.11",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pymupdf>=1.26.7",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.9",
    "uvicorn>=0.40.0",
]
